#! add work experience;

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Portfolio</title>
+	<title>Korosteleva Tatiana - frontend developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
@@ -70,11 +70,7 @@
 						<div class="panel-profile__avatar">
 							<img src="images/avatar.jpg">
 						</div>
-
 					</div>
-
-
-
 
 				</div>
 				<div class="panel panel-default panel-profile__description">
@@ -158,7 +154,7 @@
 
 			<div class="col-sm-8">
 				<div class="panel panel-default">
-					<h4>Work experience</h4>
+					<h4>Work experience <span class="label label-info">5+ years</span></h4>
 					<dl>
 						<dt>March, 2016 – present</dt>
 						<dd>
@@ -168,6 +164,7 @@
 								I am tutor for beginners. My responsibilities are explaining javascript details for students, checking their homework, finding and giving some information to read.
 							</p>
 						</dd>
+
 						<dt>December, 2015 – present</dt>
 						<dd>
 							<h5><a href="https://rambler-co.ru/en" target="_blank">Rambler&Co</a></h5>
@@ -182,7 +179,45 @@
 							</p>
 
 							<p>Using tools: grunt, requirejs, nodejs, native Javascript, jQuery plugins, jasmine for client-side testing, Git, Photoshop and Sketch, Confluence, Jira. Good skills working in terminal. IDE – PhpStorm. Multi browsers supporting (IE 9+), including mobile browsers.</p>
+						</dd>
 
+						<dt>March, 2015 – November, 2015 <span class="label label-info">9 months</span></dt>
+						<dd>
+							<h5>Reliable Systems</h5>
+							<p>IT company provides many online banking services. These services include landing pages, forms for people who wanted to open their own business. Services help users to fill up all necessary documents, receipts, etc.</p>
+							<p>I worked as frontend developer. The major attention I paid for building UX and UI interface. I worked a lot with html forms, jQuery UI plugins, Bootstrap Framework, etc.</p>
+
+							<p>Using frameworks and tools:</p>
+							<ul>
+								<li>Bootstrap 2, 3 – adaptive and responsive html layouts are necessary. Our services work fine on desktop, laptop, mobile</li>
+								<li>Photoshop</li>
+								<li>Javascript, jQuery, jQuery UI. Using and creating a lot of plugins improving  working with html forms such as dataTables, autocomplete, highcharts and many others</li>
+								<li>Angularjs</li>
+								<li>Using less, sass as css preproccessors</li>
+								<li>Git, svn</li>
+								<li>Confluence, Youtrack</li>
+								<li>Working with MySQL data base a little bit – queries for selecting, inserting, deleting, updating</li>
+							</ul>
+
+							<p>My responsibilities were developing new services based on old ones, supporting project, fixing bugs, refactoring code, improving UI and UX. Used IDE – PhpStorm.</p>
+							<p>Some examples of our services</p>
+							<ul class="list-unstyled">
+								<li><a href="https://reg-openbank.ru/index.do" target="_blank">Open Bank</a></li>
+								<li><a href="https://reg-raiffeisen.ru/index.do" target="_blank">Raiffeisen Bank</a></li>
+								<li><a href="https://reg-modulbank.ru/index.do" target="_blank">Modul Bank</a></li>
+							</ul>
+						</dd>
+
+						<dt>August, 2011 – March, 2015 <span class="label label-info">3 years 8 months</span></dt>
+						<dd>
+							<h5><a href="http://vigromcorp.com" target="_blank">Vigrom Corp.</a></h5>
+							<p>IT company working on gaming highload projects.</p>
+							<p>I worked as fullstack developer, started my job as PHP developer. I worked with Symfony, Yii Framework. Having good knowledge of PostgreSQL, MySQL.
+								Used Git, Confluence, Youtrack.</p>
+							<p>After one with half year I started work more on client side. I created control panel for highload app, thought about UX and UI, worked with jQuery and its plugins. Also I was responsible for email newsletters. We sent about 5000 emails per day. I made html layouts and css for email. Worked in Photoshop.
+								</p>
+							<p>One of the major part of my job was creating statistic reports. I built database query, got statistic, created charts and tables and analyzed it.</p>
+							<p>Used IDE – PhpStorm.</p>
 						</dd>
 					</dl>
 				</div>
