--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<span class="icon-bar"></span>
 				</button>
 
-				<a href="#">
+				<a href="index.html">
 					<img class="navbar-brand" src="images/logo.svg" alt="</>"/>
 				</a>
 			</div>
@@ -28,9 +28,10 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="collapsed-navbar">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">My works</a></li>
-					<li><a href="#">Notes</a></li>
-					<li><a href="#">Contacts</a></li>
+					<li class="active"><a href="index.html">About</a></li>
+					<li><a href="experience.html">Work experience</a></li>
+					<!--<li><a href="#">Notes</a></li>-->
+					<!--<li><a href="#">Contacts</a></li>-->
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right navbar-socials">
@@ -154,7 +155,10 @@
 
 			<div class="col-sm-8">
 				<div class="panel panel-default">
-					<h4>Work experience <span class="label label-info">5+ years</span></h4>
+					<h4>
+						Work experience <span class="label label-info">5+ years</span>
+						<a href="experience.html" class="pull-right small">Learn more</a>
+					</h4>
 					<dl>
 						<dt>March, 2016 – present</dt>
 						<dd>
@@ -169,55 +173,21 @@
 						<dd>
 							<h5><a href="https://rambler-co.ru/en" target="_blank">Rambler&Co</a></h5>
 							<p>
-								One of the biggest group of media companies in Russia. Rambler&Co includes projects such as <a href="https://lenta.ru" target="_blank">Lenta.ru</a>, <a href="https://www.afisha.ru" target="_blank">Afisha</a>, <a href="http://www.livejournal.com" target="_blank">Live Journal</a>, etc.
+								One of the biggest group of media companies in Russia. I work for project <a href="http://www.championat.com/" target="_blank">Championat</a> &mdash; the biggest sport site in Russia. I work as frontend developer. My responsibilities are developing new sub-projects and products, supporting project, fixing bugs, refactoring code, working on team.
 							</p>
-							<p>
-								I work for project <a href="http://www.championat.com/" target="_blank">Championat</a> &mdash; the biggest sport site in Russia. I work as frontend developer.
-							</p>
-							<p>
-								My responsibilities are developing new sub-projects and products, supporting project, fixing bugs, refactoring code, working on team.
-							</p>
-
-							<p>Using tools: grunt, requirejs, nodejs, native Javascript, jQuery plugins, jasmine for client-side testing, Git, Photoshop and Sketch, Confluence, Jira. Good skills working in terminal. IDE – PhpStorm. Multi browsers supporting (IE 9+), including mobile browsers.</p>
 						</dd>
 
-						<dt>March, 2015 – November, 2015 <span class="label label-info">9 months</span></dt>
+						<dt>March, 2015 – November, 2015</dt>
 						<dd>
 							<h5>Reliable Systems</h5>
-							<p>IT company provides many online banking services. These services include landing pages, forms for people who wanted to open their own business. Services help users to fill up all necessary documents, receipts, etc.</p>
-							<p>I worked as frontend developer. The major attention I paid for building UX and UI interface. I worked a lot with html forms, jQuery UI plugins, Bootstrap Framework, etc.</p>
-
-							<p>Using frameworks and tools:</p>
-							<ul>
-								<li>Bootstrap 2, 3 – adaptive and responsive html layouts are necessary. Our services work fine on desktop, laptop, mobile</li>
-								<li>Photoshop</li>
-								<li>Javascript, jQuery, jQuery UI. Using and creating a lot of plugins improving  working with html forms such as dataTables, autocomplete, highcharts and many others</li>
-								<li>Angularjs</li>
-								<li>Using less, sass as css preproccessors</li>
-								<li>Git, svn</li>
-								<li>Confluence, Youtrack</li>
-								<li>Working with MySQL data base a little bit – queries for selecting, inserting, deleting, updating</li>
-							</ul>
-
-							<p>My responsibilities were developing new services based on old ones, supporting project, fixing bugs, refactoring code, improving UI and UX. Used IDE – PhpStorm.</p>
-							<p>Some examples of our services</p>
-							<ul class="list-unstyled">
-								<li><a href="https://reg-openbank.ru/index.do" target="_blank">Open Bank</a></li>
-								<li><a href="https://reg-raiffeisen.ru/index.do" target="_blank">Raiffeisen Bank</a></li>
-								<li><a href="https://reg-modulbank.ru/index.do" target="_blank">Modul Bank</a></li>
-							</ul>
+							<p>IT company provides many online banking services.  I worked as frontend developer. The major attention I paid for building UX and UI interface. I worked a lot with html forms, jQuery UI plugins, Bootstrap Framework, etc.</p>
 						</dd>
 
-						<dt>August, 2011 – March, 2015 <span class="label label-info">3 years 8 months</span></dt>
+						<dt>August, 2011 – March, 2015</dt>
 						<dd>
 							<h5><a href="http://vigromcorp.com" target="_blank">Vigrom Corp.</a></h5>
 							<p>IT company working on gaming highload projects.</p>
-							<p>I worked as fullstack developer, started my job as PHP developer. I worked with Symfony, Yii Framework. Having good knowledge of PostgreSQL, MySQL.
-								Used Git, Confluence, Youtrack.</p>
-							<p>After one with half year I started work more on client side. I created control panel for highload app, thought about UX and UI, worked with jQuery and its plugins. Also I was responsible for email newsletters. We sent about 5000 emails per day. I made html layouts and css for email. Worked in Photoshop.
-								</p>
-							<p>One of the major part of my job was creating statistic reports. I built database query, got statistic, created charts and tables and analyzed it.</p>
-							<p>Used IDE – PhpStorm.</p>
+							<p>I worked as fullstack developer, started my job as PHP developer. After one with half year I started work more on client side. I created control panel for highload app, thought about UX and UI. One of the major part of my job was creating statistic reports. I built database query, got statistic, created charts and tables and analyzed it.</p>
 						</dd>
 					</dl>
 				</div>
