#! change Show more link;

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="index.html">About</a></li>
 					<li><a href="experience.html">Work experience</a></li>
-					<!--<li><a href="#">Notes</a></li>-->
+					<li><a href="#">Projects</a></li>
 					<!--<li><a href="#">Contacts</a></li>-->
 				</ul>
 
@@ -156,8 +156,8 @@
 			<div class="col-sm-8">
 				<div class="panel panel-default">
 					<h4>
-						Work experience <span class="label label-info">5+ years</span>
-						<a href="experience.html" class="pull-right small">Learn more</a>
+						Work experience
+						<a href="experience.html" class="small">Learn more</a>
 					</h4>
 					<dl>
 						<dt>March, 2016 – present</dt>
