#! change work experience;

--- a/experience.html
+++ b/experience.html
@@ -59,7 +59,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-sm-8">
+		<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
 			<div class="panel panel-default">
 				<h4>Work experience <span class="label label-info">5+ years</span></h4>
 
@@ -79,6 +79,9 @@
 						Online service for studying javascript and css.
 						I am tutor for beginners. My responsibilities are explaining javascript details for students, checking their homework, finding and giving some information to read.
 					</p>
+					<p>
+						<span class="label label-default">javascript</span> <span class="label label-default">communications</span>
+					</p>
 				</div>
 
 				<div class="experience-element">
@@ -92,16 +95,27 @@
 						</div>
 					</div>
 					<p>
-						One of the biggest group of media companies in Russia. Rambler&Co includes projects such as <a href="https://lenta.ru" target="_blank">Lenta.ru</a>, <a href="https://www.afisha.ru" target="_blank">Afisha</a>, <a href="http://www.livejournal.com" target="_blank">Live Journal</a>, etc.
-					</p>
-					<p>
-						I work for project <a href="http://www.championat.com/" target="_blank">Championat</a> &mdash; the biggest sport site in Russia. I work as frontend developer.
+						One of the biggest group of media companies in Russia. I work for project <a href="http://www.championat.com/" target="_blank">Championat</a> &mdash; the biggest sport site in Russia. I work as frontend developer.
 					</p>
 					<p>
 						My responsibilities are developing new sub-projects and products, supporting project, fixing bugs, refactoring code, working on team.
 					</p>
 
-					<p>Using tools: grunt, requirejs, nodejs, native Javascript, jQuery plugins, jasmine for client-side testing, Git, Photoshop and Sketch, Confluence, Jira. Good skills working in terminal. IDE – PhpStorm. Multi browsers supporting (IE 9+), including mobile browsers.</p>
+					<p>
+						<span class="label label-default">javascript</span>
+						<span class="label label-default">jquery plugins</span>
+						<span class="label label-default">grunt</span>
+						<span class="label label-default">requirejs</span>
+						<span class="label label-default">nodejs</span>
+						<span class="label label-default">jasmine</span>
+						<span class="label label-default">git</span>
+						<span class="label label-default">photoshop</span>
+						<span class="label label-default">sketch</span>
+						<span class="label label-default">confluence</span>
+						<span class="label label-default">jira</span>
+						<span class="label label-default">PhpStorm</span>
+						<span class="label label-default">terminal</span>
+					</p>
 				</div>
 
 
@@ -118,25 +132,29 @@
 					<p>IT company provides many online banking services. These services include landing pages, forms for people who wanted to open their own business. Services help users to fill up all necessary documents, receipts, etc.</p>
 					<p>I worked as frontend developer. The major attention I paid for building UX and UI interface. I worked a lot with html forms, jQuery UI plugins, Bootstrap Framework, etc.</p>
 
-					<p>Using frameworks and tools:</p>
-					<ul>
-						<li>Bootstrap 2, 3 – adaptive and responsive html layouts are necessary. Our services work fine on desktop, laptop, mobile</li>
-						<li>Photoshop</li>
-						<li>Javascript, jQuery, jQuery UI. Using and creating a lot of plugins improving  working with html forms such as dataTables, autocomplete, highcharts and many others</li>
-						<li>Angularjs</li>
-						<li>Using less, sass as css preproccessors</li>
-						<li>Git, svn</li>
-						<li>Confluence, Youtrack</li>
-						<li>Working with MySQL data base a little bit – queries for selecting, inserting, deleting, updating</li>
-					</ul>
-
-					<p>My responsibilities were developing new services based on old ones, supporting project, fixing bugs, refactoring code, improving UI and UX. Used IDE – PhpStorm.</p>
-					<p>Some examples of our services</p>
+					<p>My responsibilities were developing new services based on old ones, supporting project, fixing bugs, refactoring code, improving UI and UX.</p>
+					<p>Some examples of our services:</p>
 					<ul class="list-unstyled">
 						<li><a href="https://reg-openbank.ru/index.do" target="_blank">Open Bank</a></li>
 						<li><a href="https://reg-raiffeisen.ru/index.do" target="_blank">Raiffeisen Bank</a></li>
-						<li><a href="https://reg-modulbank.ru/index.do" target="_blank">Modul Bank</a></li>
 					</ul>
+
+					<p>
+						<span class="label label-default">javascript</span>
+						<span class="label label-default">photoshop</span>
+						<span class="label label-default">bootstrap</span>
+						<span class="label label-default">jquery</span>
+						<span class="label label-default">jquery UI</span>
+						<span class="label label-default">angularjs</span>
+						<span class="label label-default">less</span>
+						<span class="label label-default">sass</span>
+						<span class="label label-default">git</span>
+						<span class="label label-default">svn</span>
+						<span class="label label-default">confluence</span>
+						<span class="label label-default">youtrack</span>
+						<span class="label label-default">mysql</span>
+						<span class="label label-default">phpstorm</span>
+					</p>
 				</div>
 
 
@@ -150,16 +168,29 @@
 					</div>
 
 					<p>IT company working on gaming highload projects.</p>
-					<p>I worked as fullstack developer, started my job as PHP developer. I worked with Symfony, Yii Framework. Having good knowledge of PostgreSQL, MySQL.
-						Used Git, Confluence, Youtrack.</p>
-					<p>After one with half year I started work more on client side. I created control panel for highload app, thought about UX and UI, worked with jQuery and its plugins. Also I was responsible for email newsletters. We sent about 5000 emails per day. I made html layouts and css for email. Worked in Photoshop.
+					<p>I worked as fullstack developer, started my job as PHP developer. After one with half year I started work more on client side. I created control panel for highload app, thought about UX and UI, worked with jQuery and its plugins. Also I was responsible for email newsletters. We sent about 5000 emails per day. I made html layouts and css for email.
 					</p>
 					<p>One of the major part of my job was creating statistic reports. I built database query, got statistic, created charts and tables and analyzed it.</p>
-					<p>Used IDE – PhpStorm.</p>
+
+					<p>
+						<span class="label label-default">php</span>
+						<span class="label label-default">symfony</span>
+						<span class="label label-default">yii</span>
+						<span class="label label-default">jquery</span>
+						<span class="label label-default">jquery UI</span>
+						<span class="label label-default">postgresql</span>
+						<span class="label label-default">mysql</span>
+						<span class="label label-default">photoshop</span>
+						<span class="label label-default">email</span>
+						<span class="label label-default">git</span>
+						<span class="label label-default">confluence</span>
+						<span class="label label-default">youtrack</span>
+						<span class="label label-default">phpstorm</span>
+					</p>
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-4">
+		<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 			<div class="panel panel-default panel-recommendations">
 				<h4>Recommendations</h4>
 				<blockquote>
@@ -168,6 +199,7 @@
 					<footer><a href="https://www.linkedin.com/in/vlad-macari-5394b738" target="_blank">Vlad Macari</a>, Team Lead at Vigrom Media</footer>
 				</blockquote>
 			</div>
+
 			<div class="panel panel-default panel-certificates">
 				<h4>Certificates</h4>
 
