--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
 						<dd>
 							<h5><a href="https://htmlacademy.ru" target="_blank">Html Academy</a></h5>
 							<p>
-								Online service for studying javascript and css.
-								I am tutor for beginners. My responsibilities are explaining javascript details for students, checking their homework, finding and giving some information to read.
+								Online service for studying javascript and css. I am tutor for beginners.
 							</p>
 						</dd>
 
@@ -173,21 +172,20 @@
 						<dd>
 							<h5><a href="https://rambler-co.ru/en" target="_blank">Rambler&Co</a></h5>
 							<p>
-								One of the biggest group of media companies in Russia. I work for project <a href="http://www.championat.com/" target="_blank">Championat</a> &mdash; the biggest sport site in Russia. I work as frontend developer. My responsibilities are developing new sub-projects and products, supporting project, fixing bugs, refactoring code, working on team.
+								One of the biggest group of media companies in Russia. I work for project <a href="http://www.championat.com/" target="_blank">Championat</a> &mdash; the biggest sport site in Russia as frontend developer.
 							</p>
 						</dd>
 
 						<dt>March, 2015 – November, 2015</dt>
 						<dd>
 							<h5>Reliable Systems</h5>
-							<p>IT company provides many online banking services.  I worked as frontend developer. The major attention I paid for building UX and UI interface. I worked a lot with html forms, jQuery UI plugins, Bootstrap Framework, etc.</p>
+							<p>IT company provides many online banking services.  I worked as frontend developer. The major attention I paid for building UX and UI interface.</p>
 						</dd>
 
 						<dt>August, 2011 – March, 2015</dt>
 						<dd>
 							<h5><a href="http://vigromcorp.com" target="_blank">Vigrom Corp.</a></h5>
-							<p>IT company working on gaming highload projects.</p>
-							<p>I worked as fullstack developer, started my job as PHP developer. After one with half year I started work more on client side. I created control panel for highload app, thought about UX and UI. One of the major part of my job was creating statistic reports. I built database query, got statistic, created charts and tables and analyzed it.</p>
+							<p>IT company working on gaming highload projects. I worked as fullstack developer.</p>
 						</dd>
 					</dl>
 				</div>
