--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="index.html">About</a></li>
 					<li><a href="experience.html">Work experience</a></li>
-					<li><a href="#">Projects</a></li>
+					<li><a href="projects.html">Projects</a></li>
 					<!--<li><a href="#">Contacts</a></li>-->
 				</ul>
 
