#! change projects list page;

--- a/projects.html
+++ b/projects.html
@@ -62,10 +62,23 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<div class="panel panel-default">
-				<h4>This page is a draft</h4>
+				<h3>Working projects</h3>
 
 				<div>
-					<a href="projects/background-element/index.html" target="_blank">Работа с background-element</a>
+					<h4>
+						<a href="projects/background-element/index.html" target="_blank">Превью документа с использованием css element()</a>
+					</h4>
+					<p>
+						Пример использования <code>background: element(id)</code> для быстрого и простого решения проблемы отображения превью статьи для навигации внутри. <span class="label label-danger">FF only</span>
+					</p>
+					<p>
+						<a href="https://developer.mozilla.org/ru/docs/Web/CSS/element" target="_blank">Описание на MDN <i class="fa fa-external-link"></i></a>
+						<br/>
+						<a href="https://drafts.csswg.org/css-images-4/#element-notation" target="_blank">Спецификация <i class="fa fa-external-link"></i></a>
+					</p>
+					<p>
+						Также в проекте включено использование <code>css variables</code> для выстраивания пропорционального размера превью и отступа сверху с учетом скролла документа.
+					</p>
 				</div>
 			</div>
 		</div>
