#! add custom-input project; add new job;

--- a/index.html
+++ b/index.html
@@ -41,13 +41,8 @@
 						</a>
 					</li>
 					<li>
-						<a href="https://vk.com/korosteleva.tatiana" target="_blank" class="navbar-socials__element _vk">
-							<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/socials.svg#vk"></use></svg>
-						</a>
-					</li>
-					<li>
-						<a href="https://www.instagram.com/aprelia__/" target="_blank" class="navbar-socials__element _instagram">
-							<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/socials.svg#instagram"></use></svg>
+						<a href="https://twitter.com/korosteleva__" target="_blank" class="navbar-socials__element _twitter">
+							<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/socials.svg#twitter"></use></svg>
 						</a>
 					</li>
 				</ul>
@@ -77,13 +72,13 @@
 				<div class="panel panel-default panel-profile__description">
 					<h4>Tatiana Korosteleva</h4>
 					<p>Frontend developer</p>
-					<p>Just an ordinary girl, who decided to be good at something she loves. Love my job, inspired by life, perfectionist. Always tries to do all my best. </p>
+					<p>Just an ordinary girl. Love my job, inspired by life, perfectionist. Always tries to do all my best. </p>
 				</div>
 
 				<div class="panel panel-default panel-about">
 					<h4>About</h4>
 					<ul class="list-unstyled">
-						<li><i class="fa">&</i> Working at <a href="https://rambler-co.ru/en" target="_blank">Rambler&Co</a></li>
+						<li><i class="fa fa-laptop"></i> Working at Avito</li>
 						<li><i class="fa fa-code"></i> Developer since <strong>2011</strong></li>
 						<li><i class="fa fa-map-marker" aria-hidden="true"></i> Living in <strong>Moscow</strong></li>
 						<li><i class="fa fa-calendar" aria-hidden="true"></i> Born in 04/18/1992</li>
@@ -160,19 +155,27 @@
 						<a href="experience.html" class="small">Learn more</a>
 					</h4>
 					<dl>
-						<dt>March, 2016 – present</dt>
+						<dt>October, 2016 – present</dt>
 						<dd>
-							<h5><a href="https://htmlacademy.ru" target="_blank">Html Academy</a></h5>
+							<h5><a href="https://avito.ru" target="_blank">Avito</a></h5>
 							<p>
-								Online service for studying javascript and css. I am tutor for beginners.
+								The biggest Russian free classifieds site. I work for monetization unit, responsible for advertisement.
 							</p>
 						</dd>
 
-						<dt>December, 2015 – present</dt>
+						<dt>March, 2016 – October, 2016</dt>
+						<dd>
+							<h5><a href="https://htmlacademy.ru" target="_blank">Html Academy</a></h5>
+							<p>
+								Online service for studying javascript and css. I was a tutor for beginners.
+							</p>
+						</dd>
+
+						<dt>December, 2015 – October, 2016</dt>
 						<dd>
 							<h5><a href="https://rambler-co.ru/en" target="_blank">Rambler&Co</a></h5>
 							<p>
-								One of the biggest group of media companies in Russia. I work for project <a href="http://www.championat.com/" target="_blank">Championat</a> &mdash; the biggest sport site in Russia as frontend developer.
+								One of the biggest group of media companies in Russia. I worked for project <a href="http://www.championat.com/" target="_blank">Championat</a> &mdash; the biggest sport site in Russia as frontend developer.
 							</p>
 						</dd>
 
