--- a/experience.html
+++ b/experience.html
@@ -30,6 +30,7 @@
 			<ul class="nav navbar-nav">
 				<li><a href="index.html">About</a></li>
 				<li class="active"><a href="experience.html">Work experience</a></li>
+				<li><a href="projects.html">Projects</a></li>
 				<!--<li><a href="#">Notes</a></li>-->
 				<!--<li><a href="#">Contacts</a></li>-->
 			</ul>
@@ -41,13 +42,8 @@
 					</a>
 				</li>
 				<li>
-					<a href="https://vk.com/korosteleva.tatiana" target="_blank" class="navbar-socials__element _vk">
-						<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/socials.svg#vk"></use></svg>
-					</a>
-				</li>
-				<li>
-					<a href="https://www.instagram.com/aprelia__/" target="_blank" class="navbar-socials__element _instagram">
-						<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/socials.svg#instagram"></use></svg>
+					<a href="https://twitter.com/korosteleva__" target="_blank" class="navbar-socials__element _twitter">
+						<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/socials.svg#twitter"></use></svg>
 					</a>
 				</li>
 			</ul>
@@ -67,7 +63,32 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
-							<strong>March, 2016 – present</strong>
+							<strong>October, 2016 – present</strong>
+							<h5><a href="https://avito.ru" target="_blank">Avito</a></h5>
+
+						</div>
+						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 experience-element__logo-wrapper">
+							<img src="images/experience/avito-logo.svg">
+						</div>
+					</div>
+					<p>
+						The biggest Russian free classifieds site. I am frontend developer in monetization unit.
+					</p>
+					<p>
+						<span class="label label-default">es6</span>
+						<span class="label label-default">javascript</span>
+						<span class="label label-default">react</span>
+						<span class="label label-default">stylus</span>
+						<span class="label label-default">gulp</span>
+					</p>
+				</div>
+
+
+				<div class="experience-element">
+					<div class="row">
+						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+
+							<strong>March, 2016 – October, 2016 <span class="label label-info">8 months</span></strong>
 							<h5><a href="https://htmlacademy.ru" target="_blank">Html Academy</a></h5>
 
 						</div>
@@ -87,7 +108,7 @@
 				<div class="experience-element">
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-							<strong>December, 2015 – present</strong>
+							<strong>December, 2015 – October, 2016 <span class="label label-info">11 months</span></strong>
 							<h5><a href="https://rambler-co.ru/en" target="_blank">Rambler&Co</a></h5>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 experience-element__logo-wrapper">
@@ -205,6 +226,13 @@
 
 
 				<div class="panel-certificates__wrapper">
+					<div class="thumbnail">
+						<div class="caption">
+							<h5>React fundamentals</h5>
+							<p><a href="https://egghead.io/courses/react-fundamentals" target="_blank">Egghead</a></p>
+						</div>
+					</div>
+
 					<div class="thumbnail">
 						<div class="caption">
 							<h5>CSS Cross-Country</h5>
