--- a/projects.html
+++ b/projects.html
@@ -42,13 +42,8 @@
 					</a>
 				</li>
 				<li>
-					<a href="https://vk.com/korosteleva.tatiana" target="_blank" class="navbar-socials__element _vk">
-						<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/socials.svg#vk"></use></svg>
-					</a>
-				</li>
-				<li>
-					<a href="https://www.instagram.com/aprelia__/" target="_blank" class="navbar-socials__element _instagram">
-						<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/socials.svg#instagram"></use></svg>
+					<a href="https://twitter.com/korosteleva__" target="_blank" class="navbar-socials__element _twitter">
+						<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/socials.svg#twitter"></use></svg>
 					</a>
 				</li>
 			</ul>
@@ -64,10 +59,18 @@
 			<div class="panel panel-default">
 				<h3>Working projects</h3>
 
-				<div>
-					<h4>
-						<a href="projects/background-element/index.html" target="_blank">Превью документа с использованием css element()</a>
-					</h4>
+				<div class="work-project">
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
+							<h4>
+								<a href="projects/background-element/index.html" target="_blank">Превью документа с использованием css element()</a>
+							</h4>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
+							<i class="fa fa-clock-o"></i> 01.11.2016
+						</div>
+					</div>
+
 					<p>
 						Пример использования <code>background: element(id)</code> для быстрого и простого решения проблемы отображения превью статьи для навигации внутри. <span class="label label-danger">FF only</span>
 					</p>
@@ -78,6 +81,23 @@
 					</p>
 					<p>
 						Также в проекте включено использование <code>css variables</code> для выстраивания пропорционального размера превью и отступа сверху с учетом скролла документа.
+					</p>
+				</div>
+
+				<div class="work-project">
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
+							<h4>
+								<a href="projects/custom-inputs/index.html" target="_blank">Экраны онлайн голосования - кастомные стилизованные чекбоксы</a>
+							</h4>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
+							<i class="fa fa-clock-o"></i> 08.09.2016
+						</div>
+					</div>
+
+					<p>
+						Пример использования кастомизации инпутов без применения плагинов javascript
 					</p>
 				</div>
 			</div>
