#! add custom elements project

--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,30 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
+								<a href="projects/custom-elements/index.html" target="_blank">Custom Elements</a>
+							</h4>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
+							<i class="fa fa-clock-o"></i> 23.11.2016
+						</div>
+					</div>
+
+					<p>
+						Пример создания и использования <code>Custom Elements</code>. <span class="label label-danger">Chrome, Opera only</span>
+					</p>
+					<p>
+						<a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components/Custom_Elements" target="_blank">Описание на MDN <i class="fa fa-external-link"></i></a>
+						<br/>
+						<a href="https://www.w3.org/TR/custom-elements/" target="_blank">Спецификация <i class="fa fa-external-link"></i></a>
+						<br/>
+						<a href="http://caniuse.com/#feat=custom-elements" target="_blank">Can I Use <i class="fa fa-external-link"></i></a>
+					</p>
+				</div>
+
+				<div class="work-project">
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
+							<h4>
 								<a href="projects/background-element/index.html" target="_blank">Превью документа с использованием css element()</a>
 							</h4>
 						</div>
