#! move background-element to the separate project

--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,7 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
-								<a href="projects/background-element/index.html" target="_blank">Превью документа с использованием css element()</a>
+								<a href="https://korosteleva.github.io/background-element/" target="_blank">Превью документа с использованием css element()</a>
 							</h4>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
