--- a/projects.html
+++ b/projects.html
@@ -112,7 +112,7 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
-								<a href="projects/custom-inputs/index.html" target="_blank">Экраны онлайн голосования - кастомные стилизованные чекбоксы</a>
+								<a href="https://korosteleva.github.io/css-checkboxes/" target="_blank">Экраны онлайн голосования - кастомные стилизованные чекбоксы</a>
 							</h4>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
