add tinkoff project

--- a/projects.html
+++ b/projects.html
@@ -155,6 +155,23 @@
 						Пример использования кастомизации инпутов без применения плагинов javascript
 					</p>
 				</div>
+
+				<div class="work-project">
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
+							<h4>
+								<a href="https://korosteleva.github.io/tinkoff-landing/" target="_blank">Лендинг для Тинькофф Бизнес</a>
+							</h4>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
+							<i class="fa fa-clock-o"></i> 01.02.2016
+						</div>
+					</div>
+
+					<p>
+						Лендинг для проекта Тинькофф Бизнес. <span class="label label-default">Bootstrap 3</span>
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>
