edit tinkoff project info

--- a/projects.html
+++ b/projects.html
@@ -95,6 +95,7 @@
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
 								<a href="projects/custom-elements/index.html" target="_blank">Custom Elements</a>
+								<span class="label label-info">Experiment</span>
 							</h4>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
@@ -118,7 +119,7 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
-								<a href="https://korosteleva.github.io/background-element/" target="_blank">Превью документа с использованием css element()</a>
+								<a href="https://korosteleva.github.io/background-element/" target="_blank">Превью документа с использованием css element()</a> <span class="label label-info">Experiment</span>
 							</h4>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
@@ -143,7 +144,7 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
-								<a href="https://korosteleva.github.io/css-checkboxes/" target="_blank">Экраны онлайн голосования - кастомные стилизованные чекбоксы</a>
+								<a href="https://korosteleva.github.io/css-checkboxes/" target="_blank">Экраны онлайн голосования - кастомные стилизованные чекбоксы</a> <span class="label label-info">Production</span>
 							</h4>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
@@ -160,7 +161,7 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
-								<a href="https://korosteleva.github.io/tinkoff-landing/" target="_blank">Лендинг для Тинькофф Бизнес</a>
+								<a href="https://korosteleva.github.io/tinkoff-landing/" target="_blank">Лендинг для Тинькофф Бизнес</a> <span class="label label-info">Production</span>
 							</h4>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
@@ -169,7 +170,7 @@
 					</div>
 
 					<p>
-						Лендинг для проекта Тинькофф Бизнес. <span class="label label-default">Bootstrap 3</span>
+						Лендинг для проекта Тинькофф Бизнес. <code>Bootstrap 3</code>
 					</p>
 				</div>
 			</div>
