add kitchenLab project

--- a/projects.html
+++ b/projects.html
@@ -161,6 +161,23 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
+								<a href="https://korosteleva.github.io/kitchen-lab/" target="_blank">Лендинг для KitchenLab</a> <span class="label label-info">Production</span>
+							</h4>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
+							<i class="fa fa-clock-o"></i> 01.09.2016
+						</div>
+					</div>
+
+					<p>
+						Лендинг для проекта KitchenLab. <code>Bootstrap 3</code>
+					</p>
+				</div>
+
+				<div class="work-project">
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
+							<h4>
 								<a href="https://korosteleva.github.io/tinkoff-landing/" target="_blank">Лендинг для Тинькофф Бизнес</a> <span class="label label-info">Production</span>
 							</h4>
 						</div>
