add spartak project, change nav menu

--- a/projects-prod.html
+++ b/projects-prod.html
@@ -61,7 +61,8 @@
 			<ul class="nav navbar-nav">
 				<li><a href="index.html">About</a></li>
 				<li><a href="experience.html">Work experience</a></li>
-				<li class="active"><a href="projects.html">Projects</a></li>
+				<li class="active"><a href="projects-prod.html">Projects Production</a></li>
+				<li><a href="projects-experiment.html">Projects Experiment</a></li>
 				<!--<li><a href="#">Notes</a></li>-->
 				<!--<li><a href="#">Contacts</a></li>-->
 			</ul>
@@ -89,29 +90,26 @@
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<div class="panel panel-default">
 				<h3>Working projects</h3>
-
+				<p class="lead">
+					Представлены некоторые проекты из реальной жизни.
+				</p>
 				<div class="work-project">
 					<div class="row">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
-								<a href="projects/custom-elements/index.html" target="_blank">Custom Elements</a>
-								<span class="label label-info">Experiment</span>
+								<a href="https://korosteleva.github.io/spartak70/" target="_blank">Спецпроект к юбилею ХК «Спартак»</a>
 							</h4>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
-							<i class="fa fa-clock-o"></i> 23.11.2016
+							<i class="fa fa-clock-o"></i> 22.12.2016
 						</div>
 					</div>
 
 					<p>
-						Пример создания и использования <code>Custom Elements</code>. <span class="label label-danger">Chrome, Opera only</span>
+						Большой спецпроект к семидесятилетию для хоккейного клуба «Спартак», рассказывающий об истории и основных этапах развития клуба.
 					</p>
 					<p>
-						<a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components/Custom_Elements" target="_blank">Описание на MDN <i class="fa fa-external-link"></i></a>
-						<br/>
-						<a href="https://www.w3.org/TR/custom-elements/" target="_blank">Спецификация <i class="fa fa-external-link"></i></a>
-						<br/>
-						<a href="http://caniuse.com/#feat=custom-elements" target="_blank">Can I Use <i class="fa fa-external-link"></i></a>
+						<code>adaptive</code> <code>animation</code> <code>pure js</code>
 					</p>
 				</div>
 
@@ -119,32 +117,7 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
-								<a href="https://korosteleva.github.io/background-element/" target="_blank">Превью документа с использованием css element()</a> <span class="label label-info">Experiment</span>
-							</h4>
-						</div>
-						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
-							<i class="fa fa-clock-o"></i> 01.11.2016
-						</div>
-					</div>
-
-					<p>
-						Пример использования <code>background: element(id)</code> для быстрого и простого решения проблемы отображения превью статьи для навигации внутри. <span class="label label-danger">FF only</span>
-					</p>
-					<p>
-						<a href="https://developer.mozilla.org/ru/docs/Web/CSS/element" target="_blank">Описание на MDN <i class="fa fa-external-link"></i></a>
-						<br/>
-						<a href="https://drafts.csswg.org/css-images-4/#element-notation" target="_blank">Спецификация <i class="fa fa-external-link"></i></a>
-					</p>
-					<p>
-						Также в проекте включено использование <code>css variables</code> для выстраивания пропорционального размера превью и отступа сверху с учетом скролла документа.
-					</p>
-				</div>
-
-				<div class="work-project">
-					<div class="row">
-						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
-							<h4>
-								<a href="https://korosteleva.github.io/css-checkboxes/" target="_blank">Экраны онлайн голосования - кастомные стилизованные чекбоксы</a> <span class="label label-info">Production</span>
+								<a href="https://korosteleva.github.io/css-checkboxes/" target="_blank">Экраны онлайн голосования - кастомные стилизованные чекбоксы</a>
 							</h4>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
@@ -155,13 +128,16 @@
 					<p>
 						Пример использования кастомизации инпутов без применения плагинов javascript
 					</p>
+					<p>
+						<code>pure css</code>
+					</p>
 				</div>
 
 				<div class="work-project">
 					<div class="row">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
-								<a href="https://korosteleva.github.io/kitchen-lab/" target="_blank">Лендинг для KitchenLab</a> <span class="label label-info">Production</span>
+								<a href="https://korosteleva.github.io/kitchen-lab/" target="_blank">Лендинг для KitchenLab</a>
 							</h4>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
@@ -170,7 +146,10 @@
 					</div>
 
 					<p>
-						Лендинг для проекта KitchenLab. <code>Bootstrap 3</code>
+						Лендинг для проекта KitchenLab.
+					</p>
+					<p>
+						<code>Bootstrap 3</code>
 					</p>
 				</div>
 
@@ -178,7 +157,7 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-lg-10">
 							<h4>
-								<a href="https://korosteleva.github.io/tinkoff-landing/" target="_blank">Лендинг для Тинькофф Бизнес</a> <span class="label label-info">Production</span>
+								<a href="https://korosteleva.github.io/tinkoff-landing/" target="_blank">Лендинг для Тинькофф Бизнес</a>
 							</h4>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 text-right">
@@ -187,7 +166,10 @@
 					</div>
 
 					<p>
-						Лендинг для проекта Тинькофф Бизнес. <code>Bootstrap 3</code>
+						Лендинг для проекта Тинькофф Бизнес.
+					</p>
+					<p>
+						<code>Bootstrap 3</code>
 					</p>
 				</div>
 			</div>
