--- a/experience.html
+++ b/experience.html
@@ -60,7 +60,8 @@
 			<ul class="nav navbar-nav">
 				<li><a href="index.html">About</a></li>
 				<li class="active"><a href="experience.html">Work experience</a></li>
-				<li><a href="projects.html">Projects</a></li>
+				<li><a href="projects-prod.html">Projects Production</a></li>
+				<li><a href="projects-experiment.html">Projects Experiment</a></li>
 				<!--<li><a href="#">Notes</a></li>-->
 				<!--<li><a href="#">Contacts</a></li>-->
 			</ul>
