--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="index.html">About</a></li>
 					<li><a href="experience.html">Work experience</a></li>
-					<li><a href="projects.html">Projects</a></li>
+					<li><a href="projects-prod.html">Projects Production</a></li>
+					<li><a href="projects-experiment.html">Projects Experiment</a></li>
 					<!--<li><a href="#">Contacts</a></li>-->
 				</ul>
 
