--- a/experience.html
+++ b/experience.html
@@ -241,6 +241,18 @@
 					</p>
 				</div>
 			</div>
+
+			<div class="panel panel-default">
+				<div id="disqus_thread"></div>
+				<script>
+					(function() { // DON'T EDIT BELOW THIS LINE
+						var d = document, s = d.createElement('script');
+						s.src = 'https://korosteleva.disqus.com/embed.js';
+						s.setAttribute('data-timestamp', +new Date());
+						(d.head || d.body).appendChild(s);
+					})();
+				</script>
+			</div>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 			<div class="panel panel-default panel-recommendations">
