add react certificate

--- a/experience.html
+++ b/experience.html
@@ -267,6 +267,20 @@
 			<div class="panel panel-default panel-certificates">
 				<h4>Certificates</h4>
 
+				<div class="panel-certificates__wrapper">
+					<div class="thumbnail">
+						<div class="caption">
+							<h5><a href="http://learn.javascript.ru/courses/react" target="_blank">ReactJS</a></h5>
+							<p>
+								<a href="images/experience/certificate-react.jpg" target="_blank">See certificate</a>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="panel panel-default panel-certificates">
+				<h4>Courses</h4>
 
 				<div class="panel-certificates__wrapper">
 					<div class="thumbnail">
