--- a/experience.html
+++ b/experience.html
@@ -119,7 +119,7 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
-							<strong>March, 2016 – present</strong>
+							<strong>March, 2016 – May, 2017</strong>
 							<h5><a href="https://htmlacademy.ru" target="_blank">Html Academy</a></h5>
 
 						</div>
