--- a/experience.html
+++ b/experience.html
@@ -118,10 +118,9 @@
 				<div class="experience-element">
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-
 							<strong>March, 2016 – May, 2017 <span class="label label-info">1 year 2 months</span></strong>
 							<h5><a href="https://htmlacademy.ru" target="_blank">Html Academy</a></h5>
-
+                            <p class="text-muted">extra job</p>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 experience-element__logo-wrapper">
 							<img src="images/experience/htmlacademy-logo.svg">
